testsuite/tests/structs/invalid_field_name/test.out
== test.lkt ==
test.lkt:15:5: error: lower case expected for field names
15 |     A: Bool
   |     ^


lkt_compile: Done
